fix: overflow due to username to long

--- a/frontend/modal_contents/register/styles/styles.css
+++ b/frontend/modal_contents/register/styles/styles.css
@@ -1,7 +1,7 @@
 #register-main-div
 {
 	margin: auto;
-	width: 300px;
+	width: 325px;
 }
 
 #register-main-content-div
