--- a/frontend/modal_contents/side_menu/styles/side_menu_connected.css
+++ b/frontend/modal_contents/side_menu/styles/side_menu_connected.css
@@ -22,11 +22,15 @@
 	display: flex;
 	justify-content: space-between;
 	flex-direction: column;
+	width: 60%;
 }
 
 #smc-user-name
 {
-	width: 60%;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+	width: 100%;
 	padding: 10px;
 	margin: 0;
 	font-size: 2em;
