--- a/frontend/modal_contents/versus_menu/styles/match_creation.css
+++ b/frontend/modal_contents/versus_menu/styles/match_creation.css
@@ -11,7 +11,7 @@
 .header-text {
 	margin: auto;
 	text-align: center;
-	font-size: 3em;
+	font-size: 2.8em;
 	color: var(--lavender);
 	white-space: nowrap;
 }
